--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <body role="document">
 
     <!-- Fixed navbar -->
+    <!--
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -55,9 +56,83 @@
             </li>
           </ul>
         </div><!--/.nav-collapse -->
-      </div>
+     <!-- </div>
     </nav>
+-->
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a href="#" class="navbar-brand navbar-brand-centered">Equimundo UI</a>
+        </div>
+        <div class="nav navbar-nav navbar-left">
+                <input type="text" values="search">
+        </div>
+        <div class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#}">
+                            messages
+                            <span class="badge badge-normal">5</span>
+                        </a>
+                    </li>
 
+                    <li>
+                        <a href="#}" class="collection-item grey lighten-3">
+                            notifications
+                            <span class="new badge">5</span>
+                        </a>
+                    </li>
+
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Horses<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="#">My horses</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li>
+                                <a href="#">Test Horse</a>
+                            </li>
+
+                            <li class="divider"></li>
+                            <li>
+                                <a href="#">
+                                    Create a horse<span class="badge badge-info"><i class="fa fa-plus-square-o"></i></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Test Person <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="#">
+                                    <span class="fa fa-user"></span> Profile
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Settings
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Admin Panel
+                                </a>
+                            </li>
+                            <li class="divider"></li>
+                            <li>
+                                <a href="#">
+                                    Logout
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+        </div>
+    </div>
+</nav>
 
     <div class="container theme-showcase" role="main">
       <div class="row">
