--- a/index.html
+++ b/index.html
@@ -217,6 +217,11 @@
             <small>$gray-dark</small><br/>
             <small>DARK GRAY</small>
         </div>
+        <div class="swatch success">
+            <strong>#2ecc71</strong> <br>
+            <small>$color-success</small> <br>
+            <small>LIME GREEN</small>
+        </div>
         <div class="swatch info">
             <strong>#3498db</strong><br/>
             <small>$color-info</small><br/>
@@ -231,6 +236,11 @@
             <strong>#bc1a3a</strong><br/>
             <small>$color-error</small><br/>
             <small>STRONG RED</small>
+        </div>
+        <div class="swatch white">
+            <strong>#fdffff</strong><br>
+            <small>$color-white</small><br>
+            <small>VERY PALE</small>
         </div>
     </div> <!-- /container -->
 
