--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           </div>
         </div>
           <br/><br/>
-          <h6>Stylesheet</h6> 
+          <h6>Stylesheet</h6>
           <pre>&lt;link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700|Lato:400,300,400italic' rel='stylesheet' type='text/css'&gt;</pre><br/><br/>
       </div>
 
@@ -172,7 +172,7 @@
       </div>
     </div>
 
-    <!-- 
+    <!--
     <div class="row">
       <div class="col-md-6">
         <div class="page-header">
@@ -187,43 +187,51 @@
           <h4>Swatches</h4>
         </div>
 
-          <table class="table table-bordered">
-              <tbody>
-                <tr>
-                  <td width="200px" class="green-brand" style="border: 10px white solid; padding: 20px; background-color: #1ABC9C !important; color: white;">
-                    <strong>#1ABC9C</strong><br/>
-                    <small>$green-brand</small><br/>
-                    <small>BRAND TURQUOISE</small>
-                  </td>
-                  <td width="200px" class="green" style="border: 10px white solid; color: white; padding: 20px;">
-                    <strong>#066B57</strong><br/>
-                    <small>$green</small><br/>
-                    <small>GREEN</small>
-                  </td>
-                  <td width="200px" class="green-dark" style="border: 10px white solid; color: white; padding: 20px;">
-                    <strong>#033E32</strong><br/>
-                    <small>$green-dark</small><br/>
-                    <small>DARK GREEN</small>
-                </tr>
-                <tr>
-                    <td width="200px" class="gray-light" style="border: 10px white solid; color: white; padding: 20px;">
-                    <strong>#2f2f2f</strong><br/>
-                    <small>$gray-light</small><br/>
-                    <small>LIGHT GRAY</small>
-                    </td>
-                    <td width="200px" class="gray" style="border: 10px white solid; color: white; padding: 20px;">
-                    <strong>#131313</strong><br/>
-                    <small>$gray-brand</small><br/>
-                    <small>GRAY</small>
-                    </td>
-                    <td width="200px" class="gray-dark" style="border: 10px white solid; color: white; padding: 20px;">
-                    <strong>#131313</strong><br/>
-                    <small>$gray-dark</small><br/>
-                    <small>DARK GRAY</small>
-                    </td>
-                </tr>
-              </tbody>
-            </table>
+        <div class="swatch green-brand">
+            <strong>#1ABC9C</strong><br/>
+            <small>$green-brand</small><br/>
+            <small>BRAND TURQUOISE</small>
+        </div>
+        <div class="swatch green">
+            <strong>#16a085</strong><br/>
+            <small>$green</small><br/>
+            <small>GREEN</small>
+        </div>
+        <div class="swatch green-dark">
+            <strong>#1f705d</strong><br/>
+            <small>$green-dark</small><br/>
+            <small>DARK GREEN</small>
+        </div>
+        <div class="swatch gray-light">
+            <strong>#e9f0f4</strong><br/>
+            <small>$gray-light</small><br/>
+            <small>LIGHT GRAY</small>
+        </div>
+        <div class="swatch gray">
+            <strong>#9eb2c0</strong><br/>
+            <small>$gray-brand</small><br/>
+            <small>GRAY</small>
+        </div>
+        <div class="swatch gray-dark">
+            <strong>#2e3641</strong><br/>
+            <small>$gray-dark</small><br/>
+            <small>DARK GRAY</small>
+        </div>
+        <div class="swatch info">
+            <strong>#3498db</strong><br/>
+            <small>$color-info</small><br/>
+            <small>BRIGHT BLUE</small>
+        </div>
+        <div class="swatch warning">
+            <strong>#e67e22</strong><br/>
+            <small>$color-warning</small><br/>
+            <small>VIVID ORANGE</small>
+        </div>
+        <div class="swatch error">
+            <strong>#bc1a3a</strong><br/>
+            <small>$color-error</small><br/>
+            <small>STRONG RED</small>
+        </div>
     </div> <!-- /container -->
 
 
