Added index and a few changes

--- a/index.html
+++ b/index.html
@@ -101,11 +101,26 @@
     </div>
 </nav>
 
+            <div class="sidebar" style="top: 70px; right: 0px; width: 200px; position: fixed;">
+
+                  <ul class="list-group">
+                    <li class="list-group-item"><a href="#typography">Typography</a></li>
+                    <li class="list-group-item"><a href="#swatches">Swatches</a></li>
+                    <li class="list-group-item"><a href="#buttons">Buttons</a></li>
+                    <li class="list-group-item"><a href="#formelements">Form elements</a></li>
+                    <li class="list-group-item"><a href="#timeline">Timeline</a></li>
+                    <li class="list-group-item"><a href="#comments">Comments</a></li>
+                    <li class="list-group-item"><a href="#advertisements">Advertisements</a></li>
+                    <li class="list-group-item"><a href="#videoplayer">Video player</a></li>
+                  </ul>
+            </div>
+
     <div class="container theme-showcase" role="main">
+
       <div class="row">
       <div class="col-md-7">
         <div class="page-header">
-          <h4>Typography</h4>
+          <h4 id="typography">Typography</h4>
         </div>
 
         <div class="row">
@@ -151,7 +166,7 @@
     </div>
     -->
         <div class="page-header">
-          <h4>Swatches</h4>
+          <h4 id="swatches">Swatches</h4>
         </div>
 
         <div class="swatch-container">
@@ -213,7 +228,7 @@
         </div>
         <div class="row">
 
-            <div class="col-md-4">
+            <div class="col-md-5">
 
                 <div class="page-header">
                     <h4>Buttons</h4>
@@ -221,15 +236,15 @@
 
                 <button class="btn btn-hg btn-primary">Huge button</button>
                 <br/><br/>
-                <pre>&lt;button class="btn btn-hg btn-primary"&gt;Huge button&lt;/button&gt;</pre><br/><br/>
+                <pre>&lt;button class="btn btn-hg btn-primary"&gt;<br/>   Huge button<br/>&lt;/button&gt;</pre><br/><br/>
                     
                 <button class="btn btn-embossed btn-primary">Embossed button</button>
                 <br/><br/>
-                <pre>&lt;button class="btn btn-embossed btn-primary"&gt;Embossed button&lt;/button&gt;</pre><br/><br/>
+                <pre>&lt;button class="btn btn-embossed btn-primary"&gt;<br/>   Embossed button<br/>&lt;/button&gt;</pre><br/><br/>
                     
                 <button class="btn btn-primary">Primary button</button>
                 <br/><br/>
-                <pre>&lt;button class="btn btn-primary"&gt;Primary button&lt;/button&gt;</pre><br/><br/>
+                <pre>&lt;button class="btn btn-primary"&gt;<br/>   Primary button<br/>&lt;/button&gt;</pre><br/><br/>
 
                 <button class="btn btn-small">Save</button>
                 <button class="btn btn-small btn-cancel">Cancel</button>
@@ -241,6 +256,7 @@
                 <div class="page-header">
                     <h4>Form elements</h4>
                 </div>
+                Input (text, number, date), checkbox, radiobutton, textarea, dropdown
             </div>
         </div>
 
